test/modules/vass/use-depth.good
use-depth.chpl:21: error: symbol x is multiply defined
use-depth.chpl:37: note: also defined here
use-depth.chpl:22: error: symbol y is multiply defined
use-depth.chpl:28: note: also defined here
use-depth.chpl:23: error: symbol z is multiply defined
use-depth.chpl:33: note: also defined here
